Fix manage admin hidden in overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -221,7 +221,7 @@ header{
     // gap: max(10px, 1vw);
     // max-height: 1200px;
     height: 95vh;
-    overflow: auto;
+    // overflow: auto;
 }
 
 .nav-links{
